******

    gnome-mplayer is currently in a heavy state of changes 
    
    Known broken items
    
    DVD w/o menu playback
    TV playback
    
******


Development
    Set channel encoding to binary, solves problems with metadata
    Fix software volume not being set properly
    Make volume gain and post processing work
    Fix fullscreen mode when run as a plugin (X11 only)
    Set runtime in gmtk_media_player
    Cleanup some debug messages
    Fix restart in paused state
    Hook up scroll event for volume change or seeking
    Update media info from ICY stream data
    Fix TYPE_NETWORK for apple.com correctly
    Set tracker sensitivity based on seekability of content
    Reset cache percent to 0 once media starts playing
    Change channel reader priority so cache updates work
    Only show video window when we have video
    Set the background color (black), on initialization
    Never, ever call a GTK function that changes something from a thread, reading is ok
    Remove config.h from SVN
    Apply patch to gmtk_media_player from Byeongsik Jeon
    Apply patch to gm_audio from Byeongsik Jeon
    Convert all events to be signalled in the main loop vs from the thread
    Change g_type_init to gtk_init
    Initialize file descripters and alter the channel creation settings
    Don't cancel mplayer monitoring on read error, just try again
    More debugging information
    Fix problem loading DVD after loading file
    Fix problem with position not updating due to state issue
    Fix problem with media player state event triggering before the state was true
    Remove event flushing where possible
    Fix initial OSD Level setting
    Rework gnome-mplayer restart, should work better now
    Only emit the position-changed signal when position actually changes, lowers CPU usage 
    Keyboard shortcuts should work now
    Complete send_command removal
    More features for gmtk_media_player